@@ -1,3 +1,9 @@
+Tue Oct 09 15:10:00 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* perftest/perftest.py: If pylab isn't available, don't call the
+	  analyse_* functions (and don't produce pretty graphs, as a
+	  result).
+
 Tue Oct 09 14:55:53 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* README,docs/introduction.rst: Update comments about the version
